--- a/_config.yml
+++ b/_config.yml
@@ -18,17 +18,16 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Test Title
+title: Gage does things
 email: gagestorment@gmail.com
+author: Gage Storment
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  The place where I document various attempts of trying to do cool things. 
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: twitter_username
-github_username:  github_username
-
+pronouns: (he/him)
+linkedin_username: gstorment
+github_username:  gstorment
 # Build settings
 theme: minima
 plugins:
