--- a/_config.yml
+++ b/_config.yml
@@ -18,11 +18,11 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Gage does things
+title: Gage Does Things
 email: gagestorment@gmail.com
 author: Gage Storment
 description: >- # this means to ignore newlines until "baseurl:"
-  The place where I document various attempts of trying to do cool things. 
+  The place where I document various attempts of trying to do things I find cool. 
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 pronouns: (he/him)
